taskParams added to job model
